--- a/puctesis_ejemplo.tex
+++ b/puctesis_ejemplo.tex
@@ -164,12 +164,12 @@
 % or {Ingeniero Civil $\ldots$}
 \advisor      {Tomás Reyes Torres}
 \committeememberA {Alondra Chamorro Gine}
-\committeememberB {Pablo Hernández Lagos}
-\guestmemberA {}
+\committeememberB {Julio Pertuzé Salas}
+\guestmemberA {Pablo Hernández Lagos}
 \guestmemberB {}
 \ogrsmember   {}
 \subject      {Ingenier\'ia}
-\date         {Marzo 2016}
+\date         {2016}
 \copyrightname{Roberto Zúñiga Valladares}
 \copyrightyear{MMVII}
 \dedication   {Dedicada a mis padres.\\Los quiero.}
@@ -182,9 +182,10 @@
            %      pags. iii: dedicatoria                      %
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\NoChapterPageNumberCentered   % elimina encabezado - pie de pagina de la
+%\NoChapterPageNumberCentered   % elimina encabezado - pie de pagina de la
                                % primera pagina de cada capitulo
 \pagenumbering{roman}
+
 \maketitle
 
 
@@ -309,12 +310,33 @@ Then the effect of leaders on trade is related to their personality traits. Pers
 \NoChapterPageNumber           % elimina encabezado - pie de pagina de la
                                % primera pagina de cada capitulo
 \pagenumbering{arabic}
-
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
            %   CAPITULO 1 : Introducción
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{INTRODUCCIÓN}
+
+\section{Antecedentes Generales}
+
+\subsection{Hablar del comercio internacional}
+
+\subsection{Hablar del rol de los líderes}
+
+\section{Definición del Problema}
+
+\section{Hipótesis}
+
+\section{Objetivos}
+
+\section{Alcances}
+
+\section{Relevancia de la investigación}
+
+\section{Metodología de Investigación}
+
+\section{Estructura de la Memoria}
+
+\chapter{REVISIÓN BIBLIOGRÁFICA}
 
 \section{Líderes y desarrollo}
 
