--- a/puctesis_ejemplo.tex
+++ b/puctesis_ejemplo.tex
@@ -316,25 +316,71 @@ Then the effect of leaders on trade is related to their personality traits. Pers
 
 \chapter{INTRODUCCIÓN}
 
-\section{Antecedentes Generales}
+\section{Antecedentes generales}
 
 \subsection{Hablar del comercio internacional}
 
 \subsection{Hablar del rol de los líderes}
+Citar a Jones y Olken y otros
 
-\section{Definición del Problema}
+\section{Definición del problema}
+
+
 
 \section{Hipótesis}
+Las hipótesis generales planteadas para el desarrollo de esta investigación son las siguientes:
+\begin{enumerate}
+\item Los líderes nacionales afectan de manera significativa el crecimiento del comercio internacional de sus países.
+
+\item  Las características de personalidad de los líderes permiten explicar sus efectos sobre el comercio internacional. 
+\end{enumerate}
+
+Para investigar la validez de la hipótesis 2, en este estudio se adopta el modelo de personalidad de los Cinco Grandes. Bajo este marco teórico es posible subdividir la hipótesis 2 en las siguientes hipótesis específicas:
+
+\begin{enumerate}
+	\item El comercio internacional crece más durante el mandato de líderes más extravertidos.
+	\item El comercio internacional crece más durante el mandato de líderes más responsables.
+	\item El comercio internacional crece más durante el mandato de líderes más amables.
+	\item El comercio internacional crece más durante el mandato de líderes más abiertos al cambio.
+\end{enumerate}
+
 
 \section{Objetivos}
 
-\section{Alcances}
+El objetivo general de esta investigación es proveer evidencia empírica de que los líderes nacionales afectan de manera significativa el crecimiento del comercio internacional de sus países. Y, posteriormente, proporcionar evidencia de que las características de personalidad de los líderes permiten explicar este efecto. 
+
+Para cumplir con estos objetivos, se requiere alcanzar los siguientes objetivos específicos:
+
+\begin{enumerate}
+	\item Elaborar una base datos de líderes nacionales y de variables relevantes. Particularmente, esta base debe contener información relativa a las fechas de inicio y término del mandato de cada líder, razones del término del mandato y series temporales de importaciones, exportaciones y PIB del país de cada líder en la muestra.
+	\item Determinar mediante un test estadístico si los líderes nacionales ejercen un efecto causal sobre el crecimiento del comercio internacional de sus países y, en tal caso, cuantificar este efecto.
+	\item Estimar de forma consistente medidas de personalidad de los líderes en la muestra.
+	\item Determinar la relación entre el efecto de los líderes sobre el crecimiento del comercio internacional y sus medidas de personalidad.
+\end{enumerate}
+
+\section{Alcances y limitaciones del estudio}
+
+Líderes de la muestra: ¿qué tan representativos son?
+
+TLCs, impuestos y otras medidas más directas de proteccionismo/liberalismo.
+
+Cuadro con variables y observaciones que se caen
+
+Personalidad medida de forma indirecta.
+
+Espacio de inferencia?
 
 \section{Relevancia de la investigación}
 
-\section{Metodología de Investigación}
+\section{Metodología de investigación}
 
-\section{Estructura de la Memoria}
+\section{Estructura del documento}
+
+El desarrollo de la investigación se expone en cuatro capítulos. En el capítulo \ref{ch:com_importan}, que sigue al presente capítulo introductorio, se estudia la primera hipótesis general de esta investigación: si los líderes afectan causalmente el crecimiento del comercio internacional. En este capítulo se describe el test estadístico empleado para identificar el efecto de los líderes. Luego se describe la muestra de líderes usada en el estudio. Por último, se exponen los resultados obtenidos al aplicar el test sobre esta muestra de líderes.
+
+Posteriormente, en el capítulo \ref{ch:CincoGrandes} se estudia la segunda hipótesis general de esta investigación: si las características de personalidad de los líderes explican el efecto de los líderes sobre el comercio internacional. Es este capítulo se describe el modelo de personalidad de los ``Cinco Grandes''. Luego se describe la metodología empleada para estimar la personalidad de los líderes. Posteriormente se analiza la relación entre crecimiento del comercio internacional y personalidad de los líderes. Por último, se realiza un análisis de robustez de los resultados obtenidos. 
+
+Finalmente, en el capítulo \ref{ch:conclusiones} se resumen los principales resultados de esta investigación, y además se describen posibles líneas investigativas que podrían complementar o bien profundizar el presente estudio.
 
 \chapter{REVISIÓN BIBLIOGRÁFICA}
 
@@ -1498,7 +1544,7 @@ La tabla \ref{tab:suc} muestra los resultados obtenidos al estimar \ref{eq:reg_b
 	}
 \end{table}
 %\subsection{Robustez con respecto al plazo de observación}
-\chapter{CONCLUSIONES}
+\chapter{CONCLUSIONES}\label{ch:conclusiones}
 El tema de interés en este estudio es el efecto de los líderes nacionales sobre el crecimiento del comercio internacional de sus países. Puesto que la apertura económica y el comercio internacional cumplen un rol fundamental propulsando el crecimiento económico y el desarrollo de los países, resulta de gran importancia conocer los determinantes de estas variables. Sin embargo, hasta ahora se había puesto poca o nula atención el rol de los líderes nacionales.  El estudio presentado en esta memoria es el primero en proveer evidencia del efecto de los líderes sobre el comercio internacional. Además, este es el primer estudio que analiza el efecto de los Cinco Grandes rasgos de personalidad  de líderes nacionales a nivel global.
 
 En este estudio se analizan dos hipótesis centrales. La primera es que los líderes nacionales afectan de manera significativa el comercio internacional de sus países. La segunda es que las características de personalidad de los líderes permiten explicar este efecto. Esta segunda hipótesis engloba  a su vez 4 hipótesis referentes a cada rasgo de personalidad.
